# atlasnap

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-01-22_initial_migration.py  2026-01-31_add_media_model.py  2026-02-07_add_avatar_url_in_user.py  2026-02-07_add_has_password_field_in_user.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  services.py
backend/app/core/: database.py  exception_handlers.py  settings.py
backend/app/core/aws/: __init__.py  s3.py
backend/app/media/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py
backend/scripts/: init-localstack.sh
web/: .cta.json  biome.json  orval.config.ts  package.json  pnpm-lock.yaml
web/src/: routeTree.gen.ts  store.ts
web/src/api/: client.ts
web/src/components/: navbar.tsx
web/src/components/ui/: button.tsx  dropdown-menu.tsx  select.tsx  slider.tsx  switch.tsx
web/src/features/auth/components/: login-form.tsx  register-form.tsx
web/src/features/auth/hooks/: use-auth.ts
web/src/features/auth/store/: auth.ts
web/src/lib/: errors.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/_auth/: login.tsx  register.tsx  route.tsx
web/src/routes/auth/google/: callback.tsx
web/src/types/: store.ts
