[project]
name = "atlasnap-backend"
version = "0.1.0"
description = "Travel memory storage and organization SaaS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "fastapi-users[oauth,sqlalchemy]>=15.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
target-version = "py313"
